Add CSS for login

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 @import "reset.css";
+@import "variables.css";
 @import "status-bar.css";
+@import "login.css";
 
 body {
   font-family: -apple-system, "Open Sans", Ubuntu, sans-serif;
