--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 @import "reset.css";
 @import "variables.css";
-@import "status-bar.css";
-@import "login.css";
+
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 body {
   font-family: -apple-system, "Open Sans", Ubuntu, sans-serif;
