--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,11 +1,12 @@
 .status-bar {
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  background-color: #ffffff;
 }
 
 .status-bar__column {
