--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,6 @@
 :root {
   --main-color: #fae102;
   --horizontal-space: 20px;
+  --main-border: 1px solid rgba(0, 0, 0, 0.2);
+  --option-message-color: rgba(0, 0, 0, 0.5);
 }
