--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@
 @import "components/badge.css";
 @import "components/more-dot.css";
 @import "components/icon-row.css";
+@import "components/alternative-screen-header.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 body {
   color: #2e363e;
