--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -19,3 +19,16 @@
   margin-left: 25px;
   position: relative;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(365deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 2s linear infinite;
+}
