--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -6,11 +6,27 @@
   height: 300vh;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: none;
+  }
+  1% {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 .main-chat {
   margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 0.3s linear;
 }
 
 .chat__timestamp {
@@ -87,6 +103,7 @@
   padding: 5px 25px 5px 15px;
   box-sizing: border-box;
   align-items: center;
+  transition: transform 0.3s ease-in-out;
 }
 
 .reply i {
@@ -109,17 +126,24 @@
   border: var(--main-border);
   border-radius: 20px;
   font-size: 16px;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
+}
+
+.reply input:focus {
+  width: 95vw;
+  transform: translateX(-8%) translateY(-80px);
 }
 
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -20px;
+  right: 5px;
   top: 6px;
 }
 
 .reply__column:last-child > i {
-  right: 25px;
+  right: 45px;
   top: 20px;
 }
 
@@ -143,4 +167,18 @@
 .chat__timestamp,
 .message-row__content {
   z-index: -1;
+}
+
+.reply .reply__column:first-child,
+.reply .fa-face-smile {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-face-smile {
+  opacity: 0;
+}
+
+.reply:focus-within {
+  transform: translateY(80px);
 }
