--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 @import "components/more-dot.css";
 @import "components/icon-row.css";
 @import "components/alternative-screen-header.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
